# 2026xian

./: .gitignore
log/: analyze_latest.py  analyze_opponent_tactics.py  analyze_replay.py  analyze_replay17.py  analyze_win_loss.py  audit_strategy.py  compare_opponents.py  compare_timeline.py  debug_strategy_round.py  diag_latest.py  early_timeline.py  opp_track.py  replay_score.py  score_breakdown.py  trace_choke.py  trace_guard.py  trace_s02.py  trace_state.py
log/2614/: replay (1).txt  replay (6).txt
log/2616/: analyze_2616_strategy.py  analyze_match.py  analyze_stuck.py
python-client/: UPLOAD_CHECKLIST.md  VERSION_TAGS.md  debug_paths.py  local_match.py  pack_checks.py  pack_submission.py  preflight_replay.py  pvp_match.py  pyproject.toml  replay_decisions.py  replay_gate.py  run_local_test.bat  start.bat  start.sh  tag_release.py  validate_before_upload.py
python-client/lychee_basic_client/: __init__.py  config.py  framing.py  graph.py  messages.py  session.py  strategy.py
python-client/tests/: test_graph.py  test_messages.py  test_strategy_process.py
